--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "ionicons": "^7.0.0",
     "mtg-survey-app-ionic": "file:",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
     "react-router": "^5.3.4",
     "react-router-dom": "^5.3.4",
+    "swiper": "^11.2.6",
     "vite-plugin-svgr": "^4.3.0"
   },
   "devDependencies": {
